---
source: query_plan/tests/execution.rs
expression: operation_plan
---
OperationPlan
    fields:
        [posts](by 3)
            title
            body
            user(by 4)
                name
                username
                website(by 5)

    selections:
        Resolver(5):

        Resolver(4):
                name
                username

        Resolver(3):
                title
                body
